# ZeReSy

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: admin.h  admin_ui.h  application_manager.h  authenticator.h  course.h  coursecatalog.h  data_gateway.h  elective_picker.h  electivepicker.h  logger.h  login_ui.h  permutations_generator.h  schedule.h  schedule_exporter.h  schedule_filtering.h  schedule_likability_calculator.h  student.h  student_ui.h  template_generator.h
lib/: LoginUI  LoginUI.cpp  admin_ui.cpp  authenticator.cpp  course.cpp  elective_picker.cpp  permutations_generator.cpp  schedule.cpp  schedule_exporter.cpp  schedule_filtering.cpp  student.cpp  student_ui.cpp  template_generator.cpp
lib/application_manager/: admin_session.cpp  application_manager.cpp  student_session.cpp
lib/data_gateway/: data_gateway.cpp  db_queries.cpp  table_initialiser.cpp  utils.cpp
lib/schedule_exporter/: bounding_box.cpp  font_size_calculator.cpp  png.cpp  png_text_annotater.cpp  schedule_exporter.cpp
tests/: Login_ui.cpp  conflct_detection.cpp  data_gateway.cpp  data_gateway_admins.cpp  data_gateway_courses.cpp  data_gateway_students.cpp  elective_picker.cpp  png.cpp  schedule_credit_hours.cpp  schedule_exporter.cpp
